--- a/Login-UI/style.css
+++ b/Login-UI/style.css
@@ -14,9 +14,8 @@ body {
     height: 400px;
     width: 400px;
     min-width: 300px;
-    border: 1px solid black;
-    margin: auto;
-    
+    min-height:300px;
+    margin: auto;    
 }
 .form{
     display: flex;
@@ -25,7 +24,9 @@ body {
     align-items: center;
     background-color:whitesmoke ;
     align-content:center;
-    
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.7);
+    border-radius: 25px;
+    border: 1px solid black;
 }
 .form h2{
     font-size: 3rem;
